# embedded_arm

./: README.md
src/drivers/linux/arch/arm/boot/dts/: s5p4418-nanopi2-rev103.dts
src/drivers/linux/drivers/char/: Kconfig  Makefile  tomasz_gpio.c  tomasz_lsm303.c  tomasz_prj1.c
src/prj2/: AUTHORS  Makefile.in  config.h.in  config.h.in~  configure  configure.ac  configure.scan
src/prj2/data/: adc_sampler.out  adc_sampler.out.cplxfft  adc_sampler_dt.out
src/prj2/scripts/: Makefile.am  Makefile.in  prj2_daemon.sh
src/prj2/src/: Makefile.am  Makefile.in  adc_client.c  adc_client.h  adc_comp_tst.c  adc_sampler.c  adc_sampler.h  compensator.c  compensator.h  gpio_client.c  gpio_client.h  mag_client.c  mag_client.h  main.c  motor_client.c  motor_client.h  service.c  service.h
src/prj2/tools/compensation_model/: main.py
src/prj2/tools/pwr_spectrum/: main.py
